remove commented styles.

--- a/resources/css/templates/default.less
+++ b/resources/css/templates/default.less
@@ -80,3 +80,9 @@ blockquote { position: relative; font-style: italic; padding-left: 1.65em; borde
 
 dl { margin: 1em 0 1.65em 2.1em }
 dd { color:#7b7b7b; font-style: italic; font-size: 100%; vertical-align: baseline; background: transparent; margin: .375em; padding: 0; }
+// 
+// html { background: red; }
+//
+// @media (max-width: 960px) {
+//   html { background: green; }
+// }
